app/src/main/java/com/example/praktikum10/ui/ViewModel/InsertViewModel.kt
package com.example.praktikum10.ui.ViewModel

import com.example.praktikum10.model.Mahasiswa


sealed class FormState{
    object Idle : FormState()
    object Loading : FormState() //loading -> kenapa pake object karena merubah state saja tidak merubah data
    data class Success(val message: String): FormState() //sukses
    data class Error(val message: String): FormState()  //error
}

data class MhsUIState(
    val insertUiEvent: MahasiswaEvent = MahasiswaEvent(),
    val isEntryValid: FormErrorState = FormErrorState(),
)

//berfungsi untuk validasi
data class FormErrorState(
    val nim: String? = null,
    val nama: String? = null,
    val jenisKelamin: String? = null,
    val alamat: String? = null,
    val kelas: String? = null,
    val angkatan: String? = null,
){
    fun isValid():Boolean{
        return nim == null && nama == null && jenisKelamin == null &&
                alamat == null && kelas == null && angkatan == null
    }
}

// data class variabel yang menyimpan data input form
data class MahasiswaEvent(
    val nim: String = "",
    val nama: String = "",
    val jenisKelamin: String = "",
    val alamat: String = "",
    val kelas: String = "",
    val angkatan: String = "",
)

//menyimpan input form ke dalam entity
fun MahasiswaEvent.toMhsModel(): Mahasiswa = Mahasiswa(
    nim = nim,
    nama = nama,
    jenisKelamin = jenisKelamin,
    alamat = alamat,
    kelas = kelas,
    angkatan = angkatan
)